--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/first_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="First Activity!"
+        android:name="com.example.activites.FirstFragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
